further improvements on guidelines
- added templates for every segment
- added examples for every segments
- restructured folders
- removed naming conventions for official names

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "organization",
   "version": "1.0.0",
-  "description": "Contains all files, related to guidlines and examples.",
+  "description": "Contains all files, related to guidelines and examples.",
 
   "scripts": {
-    "watch-sass": "sass --watch src/styles/scss:src/styles/css",
+    "watch-sass": "sass --watch resources/styles/scss:resources/styles/css",
     "file-tree": "md-file-tree > files.md"
   },
   "repository": {
